--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             border-radius: 20px;
             box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
             padding: 40px;
-            max-width: 900px;
+            max-width: 1080px;
+            min-height: 96vh;
             width: 90%;
             text-align: center;
         }
@@ -217,9 +218,8 @@
 
         .settings-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
             gap: 20px;
-            margin-bottom: 20px;
         }
 
         .stats-card {
@@ -432,29 +432,6 @@
 
         <!-- Tab Thiết lập -->
         <div id="setup" class="tab-content active">
-            <div class="settings-grid">
-                <div class="form-group">
-                    <label for="displayTime">Thời gian hiển thị (giây):</label>
-                    <input type="number" id="displayTime" min="0.5" max="10" step="0.1" value="2">
-                </div>
-                <div class="form-group">
-                    <label for="answerDisplayTime">Thời gian hiển thị đáp án (giây):</label>
-                    <input type="number" id="answerDisplayTime" min="1" max="10" step="0.1" value="3">
-                </div>
-                <div class="form-group">
-                    <label for="gameMode">Chế độ chơi:</label>
-                    <select id="gameMode">
-                        <option value="vietnamese-to-french">Tiếng Việt → Tiếng Pháp</option>
-                        <option value="french-to-vietnamese">Tiếng Pháp → Tiếng Việt</option>
-                        <option value="mixed">Trộn lẫn</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="repeatCount">Số lần lặp mỗi từ:</label>
-                    <input type="number" id="repeatCount" min="1" max="10" value="1">
-                </div>
-            </div>
-
             <div class="create-collection">
                 <div class="form-group">
                     <label for="collectionSelect">Chọn Collection:</label>
@@ -509,6 +486,29 @@ Tôi yêu bạn | Je t'aime"></textarea>
 
         <!-- Tab Chơi game -->
         <div id="game" class="tab-content">
+            <div class="settings-grid">
+                <div class="form-group">
+                    <label for="displayTime">Thời gian hiển thị (s):</label>
+                    <input type="number" id="displayTime" min="0.5" max="10" step="0.1" value="2">
+                </div>
+                <div class="form-group">
+                    <label for="answerDisplayTime">Thời gian hiển thị đáp án (s):</label>
+                    <input type="number" id="answerDisplayTime" min="1" max="10" step="0.1" value="3">
+                </div>
+                <div class="form-group">
+                    <label for="gameMode">Chế độ chơi:</label>
+                    <select id="gameMode">
+                        <option value="vietnamese-to-french">Tiếng Việt → Tiếng Pháp</option>
+                        <option value="french-to-vietnamese">Tiếng Pháp → Tiếng Việt</option>
+                        <option value="mixed">Trộn lẫn</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="repeatCount">Số lần lặp mỗi từ:</label>
+                    <input type="number" id="repeatCount" min="1" max="10" value="1">
+                </div>
+            </div>
+
             <div class="form-group">
                 <label for="gameCollectionSelect">Chọn Collection để chơi:</label>
                 <select id="gameCollectionSelect">
