--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             min-height: 96vh;
             width: 90%;
             text-align: center;
+            margin-top: 24px;
         }
 
         h1 {
