Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -4,9 +4,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reflex - Luyện Phản Xạ Tiếng Anh & Tiếng Pháp</title>
-    <link rel="stylesheet" href="styles.css">
 
+    <!-- SEO TITLE & DESCRIPTION -->
+    <title>Reflex - Luyện Phản Xạ Tiếng Anh & Tiếng Pháp Miễn Phí</title>
+    <meta name="description"
+        content="Reflex giúp bạn luyện phản xạ nói tiếng Anh và tiếng Pháp tự nhiên qua trò chơi flashcard. Tạo bộ sưu tập từ vựng, nghe phát âm, học theo chủ đề AI gợi ý. Hoàn toàn miễn phí!">
+
+    <!-- KEYWORDS (Google ít dùng, nhưng vẫn nên có) -->
+    <meta name="keywords"
+        content="luyện tiếng Anh, luyện tiếng Pháp, phản xạ tiếng Anh, flashcard tiếng Anh, học tiếng Pháp giao tiếp, từ vựng tiếng Anh, từ vựng tiếng Pháp, app học ngoại ngữ, học tiếng Anh miễn phí, học tiếng Pháp miễn phí">
+
+    <!-- ROBOTS -->
+    <meta name="robots" content="index, follow">
+
+    <!-- CANONICAL URL -->
+    <link rel="canonical" href="https://lingo-reactor.vercel.app/index.html">
+
+    <!-- FAVICON -->
+     
+    <link rel="icon" type="image/x-icon" href="/assets/favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/assets/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/assets/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/assets/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/assets/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/assets/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/assets/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/assets/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/assets/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/assets/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
+    <!-- OPEN GRAPH / FACEBOOK -->
+    <meta property="og:title" content="Reflex - Luyện Phản Xạ Tiếng Anh & Tiếng Pháp Miễn Phí">
+    <meta property="og:description"
+        content="Học nói tiếng Anh/Pháp tự nhiên như người bản xứ. Tạo bộ từ vựng, nghe phát âm, chơi game phản xạ. Miễn phí 100%!">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://lingo-reactor.vercel.app/index.html">
+    <meta property="og:image" content="https://lingo-reactor.vercel.app/og-image.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:locale" content="vi_VN">
+    <meta property="og:site_name" content="Reflex Language">
+
+    <!-- TWITTER CARD -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Reflex - Luyện Phản Xạ Tiếng Anh & Tiếng Pháp Miễn Phí">
+    <meta name="twitter:description"
+        content="Học nói tiếng Anh/Pháp tự nhiên như người bản xứ. Tạo bộ từ vựng, nghe phát âm, chơi game phản xạ. Miễn phí 100%!">
+    <meta name="twitter:image" content="https://lingo-reactor.vercel.app/og-image.jpg">
+
+    <!-- JSON-LD SCHEMA.ORG - Web Application -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "Reflex - Luyện Phản Xạ Tiếng Anh & Tiếng Pháp",
+      "description": "Ứng dụng web giúp luyện phản xạ nói tiếng Anh và tiếng Pháp tự nhiên qua trò chơi flashcard. Tạo bộ sưu tập từ vựng, nghe phát âm, học theo chủ đề AI gợi ý.",
+      "url": "https://lingo-reactor.vercel.app/index.html",
+      "applicationCategory": "Education",
+      "operatingSystem": "Web Browser",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "creator": {
+        "@type": "Person",
+        "name": "tvtrung"
+      },
+      "inLanguage": "vi-VN",
+      "keywords": "luyện tiếng Anh, luyện tiếng Pháp, phản xạ tiếng Anh, flashcard, học ngoại ngữ"
+    }
+    </script>
+
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
