Update favicon and logo assets; adjust layout styles for improved responsiveness

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- KEYWORDS (Google ít dùng, nhưng vẫn nên có) -->
     <meta name="keywords"
-        content="luyện tiếng Anh, luyện tiếng Pháp, phản xạ tiếng Anh, flashcard tiếng Anh, học tiếng Pháp giao tiếp, từ vựng tiếng Anh, từ vựng tiếng Pháp, app học ngoại ngữ, học tiếng Anh miễn phí, học tiếng Pháp miễn phí">
+        content="luyện tiếng Anh, luyện tiếng Pháp, phản xạ tiếng Anh, flashcard tiếng Anh, học tiếng Pháp giao tiếp, từ vựng tiếng Anh, từ vựng tiếng Pháp, app học ngoại ngữ, học tiếng Anh miễn phí, học tiếng Pháp miễn phí, tvtrung, tvtrrung, lingo reactor, reflex language, reflex app, reflex tiếng Anh, reflex tiếng Pháp, học ngôn ngữ, học ngoại ngữ, học từ vựng, trò chơi học tiếng Anh, trò chơi học tiếng Pháp, học ngôn ngữ qua trò chơi, học ngôn ngữ với AI, học tiếng Anh với AI, học tiếng Pháp với AI, luyện nói tiếng Anh, luyện nói tiếng Pháp, học phát âm tiếng Anh, học phát âm tiếng Pháp, học ngôn ngữ hiệu quả, học ngôn ngữ nhanh chóng, học ngôn ngữ tự nhiên, học ngôn ngữ vui vẻ, học ngôn ngữ tương tác">
 
     <!-- ROBOTS -->
     <meta name="robots" content="index, follow">
@@ -126,7 +126,7 @@ Tôi yêu bạn : I love you hoặc Je t'aime"></textarea>
 
             <div class="form-group-wrapper">
                 <div class="form-group">
-                    <label>Hoặc tải file TXT (bắt buộc chọn Bộ sưu tập):</label>
+                    <label>Hoặc tải file TXT</label>
                     <div class="file-input-wrapper">
                         <input type="file" id="txtFileInput" accept=".txt">
                         <span>📁 Chọn file TXT hoặc kéo thả vào đây</span>
