Add Google site verification meta tag and create verification HTML file

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <!-- CANONICAL URL -->
     <link rel="canonical" href="https://lingo-reactor.vercel.app/index.html">
 
+    <!-- GOOGLE SITE VERIFICATION -->
+    <meta name="google-site-verification" content="pC6M7jj2zF1WIk5kXR6nj-sYkHiNmHnIyD_Tn-ZXos4" />
+
     <!-- FAVICON -->
      
     <link rel="icon" type="image/x-icon" href="/assets/favicon/favicon.ico">
